syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jal.crawler.proto.config";


message ConfigStatus {
    bool init = 1;
}
message RedisConfig {
    string host = 1;
    int32 port = 2;
    string password = 3;
}